# music-ball-factory

./: .gitignore  pyproject.toml
config/: style_bible.json
pipeline/audio/: analyze.py
pipeline/blender/: scene_builder.py
references/marvinblend/notes/: visual_bible.md
scripts/: run.py
